[package]
name = "linux_wasm_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
num_cpus = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
vm-fdt = "0.3.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", version = "23.0.0" }

[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
